--- a/src/main/resources/templates/boards/index.html
+++ b/src/main/resources/templates/boards/index.html
@@ -5,25 +5,35 @@
 <link rel="stylesheet" media="all" th:href="@{/css/style.css}" />
 <link rel="stylesheet" media="all"
 	th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}" />
-<!-- <link href="/css/index.css" th:href="@{/css/index.css}" rel="stylesheet"></link>
-<script src="/js/index.js" th:src="@{/js/index.js}"></script> -->
-
+<link href="/css/boards.css" th:href="@{/css/boards.css}"
+	rel="stylesheet"></link>
 <head>
 <meta charset="UTF-8">
 <title>掲示板一覧</title>
 </head>
 <body>
-	<div class="container d-flex align-items-center mt-5">
-		<div sec:authorize="isAuthenticated()">
-			ようこそ<span th:text="${username}">ゲスト</span>さん!
-			<nav class="navbar navbar-light bg-light">
-				<form action="/boards/search" method="get" class="form-inline">
-					<input name="name" class="form-control mr-sm-2" type="search"
+	<header class="p-header my-3">
+		<div class="p-header-container">
+			<nav class="navbar navbar-light justify-content-between">
+				<div sec:authorize="isAuthenticated()">
+					ようこそ<span th:text="${username}">ゲスト</span>さん!
+				</div>
+				<form class="form-inline" action="/boards/search" method="get">
+					<input class="form-control mr-sm-2" type="search" name="name"
 						placeholder="キーワード検索" aria-label="Search">
-					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">検索</button>
+					<button class="btn btn-outline-info my-2 my-sm-0" type="submit">検索</button>
 				</form>
+				<div>
+					<a href="/boards/new" class="btn btn-info btn-xs pull-right">新規作成</a>
+				</div>
+				<a href="/login"
+					class="btn btn-info btn-xs pull-right mx-5　navbar-brand">ログイン</a>
 			</nav>
-			<table class="table table-striped">
+		</div>
+	</header>
+	<div class="main">
+		<div class="container">
+			<table class="table table-striped my-5 border-dark">
 				<thead>
 					<tr>
 						<th scope="col">No.</th>
@@ -37,8 +47,6 @@
 				</thead>
 				<tbody>
 					<tr th:each="board, i:${boards}" th:object="${board}">
-<!-- 					<tr th:each="board:${boards}" th:object="${board}">
- -->						<!-- <td th:text="*{board_id}" scope="row">1</td> -->
 						<td th:text="${i.index + 1}" scope="row">1</td>
 						<td><a
 							th:href="@{/boards/{board_id}(board_id=${board.board_id})}"
@@ -51,9 +59,16 @@
 					</tr>
 				</tbody>
 			</table>
-			<div>
-				<a href="/boards/new" class="btn btn-default btn-xs pull-right">新規作成</a>
-			</div>
+
+			<nav aria-label="Page navigation example">
+				<ul class="pagination">
+					<li class="page-item"><a class="page-link" href="#">Previous</a></li>
+					<li class="page-item"><a class="page-link" href="#">1</a></li>
+					<li class="page-item"><a class="page-link" href="#">2</a></li>
+					<li class="page-item"><a class="page-link" href="#">3</a></li>
+					<li class="page-item"><a class="page-link" href="#">Next</a></li>
+				</ul>
+			</nav>
 		</div>
 	</div>
 	<script type="text/javascript"
