--- a/src/main/resources/templates/boards/show.html
+++ b/src/main/resources/templates/boards/show.html
@@ -5,28 +5,36 @@
 <link rel="stylesheet" media="all" th:href="@{/css/style.css}" />
 <link rel="stylesheet" media="all"
 	th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}" />
+<link href="/css/boards.css" th:href="@{/css/boards.css}"
+	rel="stylesheet"></link>
 <head>
 <meta charset="UTF-8">
 <title>掲示板個別ページ</title>
 </head>
 <body>
-	<div class="container d-flex align-items-center mt-5">
-		<div sec:authorize="isAuthenticated()">
-			<span th:text="${boardName}">ポケモン育成論掲示板</span>
-			<nav class="navbar navbar-light bg-light">
-				<form th:action="|/boards/${board_id}/comments/searchTitle|" method="get"
-					class="form-inline">
+	<header class="p-header my-3">
+		<div class="p-header-container">
+			<nav class="navbar navbar-light justify-content-between">
+				<div th:text="${boardName}">ポケモン育成論掲示板</div>
+				<form th:action="|/boards/${board_id}/comments/searchTitle|"
+					method="get" class="form-inline">
 					<input name="title" class="form-control mr-sm-2" type="search"
-						placeholder="タイトルからキーワード検索" aria-label="Search">
-					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">検索</button>
+						placeholder="タイトルから検索" aria-label="Search">
+					<button class="btn btn-outline-info my-2 my-sm-0" type="submit">検索</button>
 				</form>
-				<form th:action="|/boards/${board_id}/comments/searchText|" method="get"
-					class="form-inline">
+				<form th:action="|/boards/${board_id}/comments/searchText|"
+					method="get" class="form-inline">
 					<input name="text" class="form-control mr-sm-2" type="search"
-						placeholder="本文からキーワード検索" aria-label="Search">
-					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">検索</button>
+						placeholder="本文から検索" aria-label="Search">
+					<button class="btn btn-outline-info my-2 my-sm-0" type="submit">検索</button>
 				</form>
+				<a href="/login"
+					class="btn btn-info btn-xs pull-right mx-5　navbar-brand">ログイン</a>
 			</nav>
+		</div>
+	</header>
+	<div class="main">
+		<div class="container">
 			<table class="table table-striped">
 				<thead>
 					<tr>
@@ -40,18 +48,18 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:each="comment:${comments}" th:object="${comment}">
-						<td th:text="*{comment_id}" scope="row">1</td>
+					<tr th:each="comment, i:${comments}" th:object="${comment}">
+						<td th:text="${i.count}" scope="row">1</td>
 						<td th:text="*{title}">ピカチュウ育成論</td>
 						<td th:text="*{text}">ありがとう！</td>
 						<td th:text="*{username}">サトシ</td>
 						<td th:text="*{created_at}">2020年2月22日</td>
-						<td><a class="btn btn-default btn-xs"
+						<td><a class="btn btn-info btn-xs"
 							th:href="|/boards/${board_id}/comments/*{comment_id}/edit|">編集</a></td>
 						<td>
 							<form th:action="|/boards/${board_id}/comments/*{comment_id}|"
 								method="POST">
-								<button class="btn btn-default btn-xs">削除</button>
+								<button class="btn btn-info btn-xs">削除</button>
 							</form>
 						</td>
 					</tr>
@@ -63,6 +71,7 @@
 			</div>
 		</div>
 	</div>
+
 	<script type="text/javascript"
 		th:src="@{/webjars/jquery/1.12.4/jquery.min.js}"></script>
 	<script type="text/javascript"
