--- a/src/main/resources/templates/boards/index.html
+++ b/src/main/resources/templates/boards/index.html
@@ -7,6 +7,7 @@
 	th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}" />
 <link href="/css/boards.css" th:href="@{/css/boards.css}"
 	rel="stylesheet"></link>
+	<script src="/js/boards.js" th:src="@{/js/boards.js}"></script>
 <head>
 <meta charset="UTF-8">
 <title>掲示板一覧</title>
@@ -27,7 +28,7 @@
 					<a href="/boards/new" class="btn btn-info btn-xs pull-right">新規作成</a>
 				</div>
 				<a href="/login"
-					class="btn btn-info btn-xs pull-right mx-5　navbar-brand">ログイン</a>
+					class="login btn btn-info btn-xs pull-right mx-5　navbar-brand">ログイン</a>
 			</nav>
 		</div>
 	</header>
