--- a/src/main/resources/templates/comments/edit.html
+++ b/src/main/resources/templates/comments/edit.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" media="all" th:href="@{/css/style.css}" />
 <link rel="stylesheet" media="all"
 	th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}" />
-	<link href="/css/boards.css" th:href="@{/css/boards.css}"
+<link href="/css/boards.css" th:href="@{/css/boards.css}"
 	rel="stylesheet"></link>
 <head>
 <meta charset="UTF-8">
@@ -18,8 +18,10 @@
 				<!-- 			th:boardNameの追加
  -->
 				<div>ポケモン育成論掲示板</div>
-				<form role="form" id="logout" th:action="@{/logout}" method="post"> <button  class="btn btn-info btn-xs pull-right mx-5　navbar-brand" type="submit">ログアウト</button>
-				</form> 
+				<form role="form" id="logout" th:action="@{/logout}" method="post">
+					<button class="btn btn-info btn-xs pull-right mx-5　navbar-brand"
+						type="submit">ログアウト</button>
+				</form>
 			</nav>
 		</div>
 	</header>
@@ -41,10 +43,9 @@
 			</form>
 		</div>
 	</div>
-
 	<script type="text/javascript"
 		th:src="@{/webjars/jquery/1.12.4/jquery.min.js}"></script>
 	<script type="text/javascript"
 		th:src="@{/webjars/bootstrap/3.4.1/js/bootstrap.min.js}"></script>
-  </body>
+</body>
 </html>
