--- a/src/main/resources/templates/comments/edit.html
+++ b/src/main/resources/templates/comments/edit.html
@@ -27,7 +27,7 @@
 	</header>
 	<div class="main">
 		<div class="container">
-			<form method="post" action="#"
+			<form method="Post" action="#"
 				th:action="|/boards/${board_id}/comments/${comment_id}/update|">
 				<div class="form-group text-center">
 					<label>タイトル</label> <input type="text" name="title"
