--- a/src/main/resources/templates/boards/index.html
+++ b/src/main/resources/templates/boards/index.html
@@ -7,7 +7,7 @@
 	th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}" />
 <link href="/css/boards.css" th:href="@{/css/boards.css}"
 	rel="stylesheet"></link>
-	<script src="/js/boards.js" th:src="@{/js/boards.js}"></script>
+<script src="/js/boards.js" th:src="@{/js/boards.js}"></script>
 <head>
 <meta charset="UTF-8">
 <title>掲示板一覧</title>
@@ -27,10 +27,7 @@
 				<div>
 					<a href="/boards/new" class="btn btn-info btn-xs pull-right">新規作成</a>
 				</div>
-<!-- 				thymeleafのif文はシングルクォーテーションで囲む。
- -->				<a th:if="${username != 'ゲスト'}" href="/logout"
-					class="login btn btn-info btn-xs pull-right mx-5　navbar-brand">ログアウト</a>
-					<a th:if="${username == 'ゲスト'}" href="/login"
+				<a href="/login"
 					class="login btn btn-info btn-xs pull-right mx-5　navbar-brand">ログイン</a>
 			</nav>
 		</div>
@@ -45,34 +42,33 @@
 						<th scope="col">掲示板作成者</th>
 						<th scope="col">掲示板作成日</th>
 						<th scope="col">最終投稿日時</th>
-						<!-- 					<th></th>
- -->
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:each="board, i:${boards}" th:object="${board}">
+					<tr th:each="board,i:${boardList}">
 						<td th:text="${i.index + 1}" scope="row">1</td>
 						<td><a
-							th:href="@{/boards/{board_id}(board_id=${board.board_id})}"
-							th:text="${board.name}" th:method="get">ポケモン</a></td>
-						<td th:text="${board.username}">サトシ</td>
-						<td th:text="${board.created_at}"></td>
+							th:href="@{/boards/{board_id}(board_id=${board.board_id}/11}"
+							th:text="${{board.name}}" th:method="get">ポケモン</a></td>
+						<td th:text="${{board.username}}">サトシ</td>
+						<td th:text="${{board.created_at}}"></td>
 						<td>2020年2月25日</td>
-						<!-- 					<td><a class="btn btn-default btn-xs"
-						th:href="@{/boards/{id}(id=*{id})}">詳細</a></td> -->
 					</tr>
 				</tbody>
 			</table>
 
 			<nav aria-label="Page navigation example">
-				<ul class="pagination">
-					<li class="page-item"><a class="page-link" href="#">Previous</a></li>
-					<li class="page-item"><a class="page-link" href="#">1</a></li>
-					<li class="page-item"><a class="page-link" href="#">2</a></li>
-					<li class="page-item"><a class="page-link" href="#">3</a></li>
-					<li class="page-item"><a class="page-link" href="#">Next</a></li>
-				</ul>
+
+					<ul class="pagination justify-content-center">
+						<li class="page-item"><a class="page-link" th:href="@{|1|}">先頭へ</a></li>
+						<li class="page-item" th:each="pageNumber : ${pageNumbers}"><a
+							class="page-link" th:href="@{|${pageNumber}|}"
+							th:text=${pageNumber}>1</a></li>
+						<li class="page-item"><a class="page-link"
+							th:href="@{|${pageNumber}|}">最後へ</a></li>
+					</ul>
 			</nav>
+
 		</div>
 	</div>
 	<script type="text/javascript"
