--- a/src/main/resources/templates/comments/new.html
+++ b/src/main/resources/templates/comments/new.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" media="all" th:href="@{/css/style.css}" />
 <link rel="stylesheet" media="all"
 	th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}" />
-	<link href="/css/boards.css" th:href="@{/css/boards.css}"
+<link href="/css/boards.css" th:href="@{/css/boards.css}"
 	rel="stylesheet"></link>
 <head>
 <meta charset="UTF-8">
@@ -25,17 +25,19 @@
 	</header>
 	<div class="main">
 		<div class="container">
-			<form method="post" action="#"
+			<form method="post" action="#" id="data_upload_form"
+				enctype="multipart/form-data"
 				th:action="|/boards/${board_id}/comments/create|">
 				<div class="form-group text-center">
-					<label>タイトル</label> <input type="text" name="title"
-						class="form-control" autofocus="autofocus">
+					<label>タイトル</label> <input type="text" th:object="${comment}"
+						th:name="title" class="form-control" autofocus="autofocus">
 				</div>
 				<div class="form-group text-center">
 					<label for="exampleFormControlTextarea1">本文</label>
-					<textarea name="text" class="form-control"
-						id="exampleFormControlTextarea1" rows="3" required="required"
-						autofocus="autofocus"></textarea>
+					<textarea th:object="${comment}" th:name="text"
+						class="form-control" id="exampleFormControlTextarea1" rows="3"
+						required="required" autofocus="autofocus"></textarea>
+					画像ファイルを選択：<input type="file" th:object="${imageForm}" name="image" class="m-2" /><br />
 				</div>
 				<button class="btn btn-info btn-block login" type="submit">投稿する</button>
 			</form>
